<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newAccountText"
            android:layout_above="@+id/newUserText"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_accn"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/newUserText"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_usrn"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newPasswordText"
            android:layout_below="@+id/newUserText"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_pw"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add"
            android:id="@+id/addButton"
            android:layout_below="@+id/newPasswordText"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informAdd_text"
            android:id="@+id/informTextView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:gravity="center"
            android:layout_marginBottom="36dp"/>
</RelativeLayout>