<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_welcome"
            android:id="@+id/welcomeTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:textSize="18sp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/userNameText"
            android:hint="@string/hint_username"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/passwordText"
            android:layout_alignEnd="@+id/passwordText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_below="@+id/userNameText"
            android:hint="@string/hint_password"
            android:layout_alignStart="@+id/welcomeTextView"
            android:layout_alignEnd="@+id/welcomeTextView"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_login"
            android:id="@+id/loginButton"
            android:layout_below="@+id/passwordText"
            android:layout_centerHorizontal="true"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informNew_text"
            android:id="@+id/informTextView"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="36dp"/>

</RelativeLayout>
